Increase k3s version to v1.23.16+k3s1 and fix ubuntu 22.04 lts installation problem.
Signed-off-by: Burak Ince <burak.ince@linux.org.tr>

--- a/roles/prereq/tasks/main.yml
+++ b/roles/prereq/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: apt-get install linux-modules-extra-raspi on Ubuntu
+  apt:
+    name: linux-modules-extra-raspi
+    state: present
+    force_apt_get: yes
+  when: ansible_distribution in ['Ubuntu']
+  notify: reboot
+
 - name: Set SELinux to disabled state
   selinux:
     state: disabled
