--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,12 @@
   gather_facts: yes
   become: yes
   roles:
+    - role: hifis.unattended_upgrades
+      unattended_automatic_reboot: true
+      unattended_automatic_reboot_time: "07:00"
+      unattended_remove_unused_dependencies: true
+      unattended_remove_new_unused_dependencies: true
+      when: ansible_distribution in ['Ubuntu']
     - role: prereq
     - role: download
     - role: raspberrypi
