Fix inventory config setting

--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,8 @@
 ---
 
 - hosts: k3s_cluster
-  gather_facts: yes
-  become: yes
+  gather_facts: true
+  become: true
   roles:
     - role: hifis.unattended_upgrades
       unattended_automatic_reboot: true
@@ -15,11 +15,11 @@
     - role: raspberrypi
 
 - hosts: master
-  become: yes
+  become: true
   roles:
     - role: k3s/master
 
 - hosts: node
-  become: yes
+  become: true
   roles:
     - role: k3s/node
