--- a/roles/k3s_node/tasks/main.yml
+++ b/roles/k3s_node/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Copy K3s service file
-  template:
+  ansible.builtin.template:
     src: "k3s.service.j2"
     dest: "{{ systemd_dir }}/k3s-node.service"
     owner: root
@@ -9,7 +9,7 @@
     mode: 0755
 
 - name: Enable and check K3s service
-  systemd:
+  ansible.builtin.systemd:
     name: k3s-node
     daemon_reload: yes
     state: restarted
