--- a/roles/prereq/tasks/main.yml
+++ b/roles/prereq/tasks/main.yml
@@ -1,40 +1,40 @@
 ---
-- name: apt-get install linux-modules-extra-raspi on Ubuntu
-  apt:
+- name: Install linux-modules-extra-raspi on Ubuntu
+  ansible.builtin.apt:
     name: linux-modules-extra-raspi
     state: present
     force_apt_get: yes
   when: ansible_distribution in ['Ubuntu']
-  notify: reboot
+  notify: Reboot
 
 - name: Set SELinux to disabled state
-  selinux:
+  ansible.posix.selinux:
     state: disabled
   when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
 
 - name: Increase max_user_instances limit
-  sysctl:
+  ansible.posix.sysctl:
     name: fs.inotify.max_user_instances
     value: "1280"
     state: present
     reload: yes
 
 - name: Increase max_user_watches limit
-  sysctl:
+  ansible.posix.sysctl:
     name: fs.inotify.max_user_watches
     value: "655360"
     state: present
     reload: yes
 
 - name: Enable IPv4 forwarding
-  sysctl:
+  ansible.posix.sysctl:
     name: net.ipv4.ip_forward
     value: "1"
     state: present
     reload: yes
 
 - name: Enable IPv6 forwarding
-  sysctl:
+  ansible.posix.sysctl:
     name: net.ipv6.conf.all.forwarding
     value: "1"
     state: present
@@ -42,20 +42,20 @@
   when: ansible_all_ipv6_addresses
 
 - name: Add br_netfilter to /etc/modules-load.d/
-  copy:
+  ansible.builtin.copy:
     content: "br_netfilter"
     dest: /etc/modules-load.d/br_netfilter.conf
     mode: "u=rw,g=,o="
   when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
 
 - name: Load br_netfilter
-  modprobe:
+  community.general.modprobe:
     name: br_netfilter
     state: present
   when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
 
 - name: Set bridge-nf-call-iptables (just to be sure)
-  sysctl:
+  ansible.posix.sysctl:
     name: "{{ item }}"
     value: "1"
     state: present
@@ -66,7 +66,7 @@
     - net.bridge.bridge-nf-call-ip6tables
 
 - name: Add /usr/local/bin to sudo secure_path
-  lineinfile:
+  ansible.builtin.lineinfile:
     line: 'Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin'
     regexp: "Defaults(\\s)*secure_path(\\s)*="
     state: present
