--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,6 @@
 ---
-
-- hosts: k3s_cluster
+- name: Install K3s Cluster
+  hosts: k3s_cluster
   gather_facts: true
   become: true
   roles:
@@ -14,12 +14,14 @@
     - role: download
     - role: raspberrypi
 
-- hosts: master
+- name: Make the node K3s main node
+  hosts: master
   become: true
   roles:
-    - role: k3s/master
+    - role: k3s_master
 
-- hosts: node
+- name: Make all nodes K3s worker nodes
+  hosts: node
   become: true
   roles:
-    - role: k3s/node
+    - role: k3s_node
