Add editor config file to support multiple editors

--- a/roles/k3s_master/tasks/main.yml
+++ b/roles/k3s_master/tasks/main.yml
@@ -12,9 +12,9 @@
 - name: Enable and check K3s service
   ansible.builtin.systemd:
     name: k3s
-    daemon_reload: yes
+    daemon_reload: true
     state: restarted
-    enabled: yes
+    enabled: true
 
 - name: Wait for node-token
   ansible.builtin.wait_for:
@@ -55,7 +55,7 @@
   ansible.builtin.copy:
     src: /etc/rancher/k3s/k3s.yaml
     dest: ~{{ ansible_user }}/.kube/config
-    remote_src: yes
+    remote_src: true
     owner: "{{ ansible_user }}"
     mode: "u=rw,g=,o="
 
