--- a/roles/k3s_node/tasks/main.yml
+++ b/roles/k3s_node/tasks/main.yml
@@ -11,6 +11,6 @@
 - name: Enable and check K3s service
   ansible.builtin.systemd:
     name: k3s-node
-    daemon_reload: yes
+    daemon_reload: true
     state: restarted
-    enabled: yes
+    enabled: true
