--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.systemd:
     name: "{{ item }}"
     state: stopped
-    enabled: no
+    enabled: false
   failed_when: false
   with_items:
     - k3s
@@ -39,4 +39,4 @@
 
 - name: Reload daemon
   ansible.builtin.systemd:
-    daemon_reload: yes
+    daemon_reload: true
